1st feature with step definition

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "System testing for website using TDD, BDD, Selenium webdriver, Cucumber ,Gherkin, JavaScript.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./node_modules/updated-selenium-cucumber-js/index.js"
   },
   "repository": {
     "type": "git",
